# cuda-conan-cmake

./: CMakeLists.txt  README.md  conanfile.py
include/: saxpy.cuh
src/: main.cu
